build : 배포 관련 작업